[workspace]
resolver = "2"

members = ["xtask/", "lsp-server/*", "compiler/*", "fuzzers/*"]

default-members = ["xtask/", "compiler/*", "lsp-server/*"]

[workspace.package]
authors = ["DropDemBits"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
camino = "1.1.1"
if_chain = "1.0"
itertools = "0.10.3"
indexmap = "1.7.0"
insta = "1.28"
# FIXME: tied to tower-lsp version, use separate structs so that changes are confined to lsp-server
lsp-types = "0.93.2"
paste = "1.0.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
unindent = "0.2"

# Compiler crates
toc-analysis = { path = "compiler/toc_analysis" }
toc-ast-db = { path = "compiler/toc_ast_db" }
toc-hir = { path = "compiler/toc_hir" }
toc-hir-codegen = { path = "compiler/toc_hir_codegen" }
toc-hir-db = { path = "compiler/toc_hir_db" }
toc-hir-lowering = { path = "compiler/toc_hir_lowering" }
toc-hir-pretty = { path = "compiler/toc_hir_pretty" }
toc-parser = { path = "compiler/toc_parser" }
toc-reporting = { path = "compiler/toc_reporting" }
toc-salsa = { path = "compiler/toc_salsa" }
toc-scanner = { path = "compiler/toc_scanner" }
toc-source-graph = { path = "compiler/toc_source_graph" }
toc-span = { path = "compiler/toc_span" }
toc-syntax = { path = "compiler/toc_syntax" }
toc-validate = { path = "compiler/toc_validate" }
toc-vfs = { path = "compiler/toc_vfs" }
toc-vfs-db = { path = "compiler/toc_vfs_db" }

# IDE crates
toc-ide-db = { path = "lsp-server/toc-ide-db" }

[profile.release]
debug = true

[patch.crates-io]
lazy_static = { git = "https://github.com/rust-fuzz/resettable-lazy-static.rs" }
