[workspace]
resolver = "2"

members = ["xtask/", "compiler/*", "lsp-server/*", "spec/*", "fuzzers/*"]

default-members = ["xtask/", "compiler/*", "lsp-server/*", "spec/*"]

[workspace.package]
authors = ["DropDemBits"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
byteorder = "1.5.0"
camino = "1.1.1"
either = "1.13.0"
itertools = "0.14"
indexmap = "2.7.1"
insta = "1.28"
# FIXME: tied to tower-lsp version, use separate structs so that changes are confined to lsp-server
lsp-types = "0.94.1"
tower-lsp = "0.20.0"
miette = "7.4"
proc-macro2 = "1.0.93"
paste = "1.0.5"
rowan = "0.16"
rustc-hash = "2.1"
salsa = { git = "https://github.com/salsa-rs/salsa/" }
thiserror = "2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
unindent = "0.2"

# Compiler crates
toc-analysis = { path = "compiler/toc-analysis" }
toc-ast-db = { path = "compiler/toc-ast-db" }
toc-hir-expand = { path = "compiler/toc-hir-expand" }
toc-hir-def = { path = "compiler/toc-hir-def" }
toc-hir = { path = "compiler/toc-hir" }
toc-hir-codegen = { path = "compiler/toc-hir-codegen" }
toc-hir-db = { path = "compiler/toc-hir-db" }
toc-hir-lowering = { path = "compiler/toc-hir-lowering" }
toc-hir-pretty = { path = "compiler/toc-hir-pretty" }
toc-parser = { path = "compiler/toc-parser" }
toc-paths = { path = "compiler/toc-paths" }
toc-reporting = { path = "compiler/toc-reporting" }
toc-salsa-collections = { path = "compiler/toc-salsa-collections" }
toc-scanner = { path = "compiler/toc-scanner" }
toc-source-graph = { path = "compiler/toc-source-graph" }
toc-span = { path = "compiler/toc-span" }
toc-syntax = { path = "compiler/toc-syntax" }
toc-validate = { path = "compiler/toc-validate" }
toc-vfs = { path = "compiler/toc-vfs" }
toc-vfs-db = { path = "compiler/toc-vfs-db" }

# Instruction spec crates
stackful-spec = { path = "spec/stackful-spec" }
turing-bytecode = { path = "spec/turing-bytecode" }

[workspace.lints.rust]
elided_named_lifetimes = "forbid"

[profile.release]
debug = true
