[package]
name = "xtask"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ungrammar = "1.6.0"
anyhow = "1.0.0"
quote = "1.0"
heck = "0.4"
xshell = "0.2.2"
unindent = "0.1"
