[package]
name = "xtask"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ungrammar = "1.6.0"
quote = "1.0"
heck = "0.4"
xshell = "0.2.7"
camino.workspace = true
unindent.workspace = true
xflags = "0.3.2"
color-eyre = "0.6.3"
eyre = "0.6.12"
