[package]
name = "xtask"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stackful-spec.workspace = true

camino.workspace = true
heck = "0.4"
miette = { workspace = true, features = ["fancy"] }
proc-macro2.workspace = true
quote = "1.0"
thiserror.workspace = true
ungrammar = "1.6.0"
unindent.workspace = true
xflags = "0.3.2"
xshell = "0.2.7"
