[package]
name = "toc-analysis"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-hir = { workspace = true }
toc-hir-db = { workspace = true }
toc-hir-lowering = { workspace = true }
toc-reporting = { workspace = true }
toc-source-graph = { workspace = true }
toc-span = { workspace = true }

salsa = { workspace = true }
indexmap = { workspace = true }
thiserror = "1.0.24"
upcast = { workspace = true }

[dev-dependencies]
toc-paths = { workspace = true }
toc-ast-db = { workspace = true }
toc-vfs = { workspace = true }
toc-vfs-db = { workspace = true }

insta = { workspace = true }
unindent = { workspace = true }
paste = { workspace = true }
