[package]
name = "toc-hir-codegen"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
indexmap.workspace = true
toc-analysis.workspace = true
toc-ast-db.workspace = true
toc-hir.workspace = true
toc-hir-db.workspace = true
toc-reporting.workspace = true
toc-source-graph.workspace = true
toc-span.workspace = true
toc-vfs-db.workspace = true
turing-bytecode.workspace = true
