[package]
name = "toc-hir-db"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-hir = { workspace = true }
toc-hir-lowering = { workspace = true }

salsa = { workspace = true }
