[package]
name = "toc-hir-def"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { workspace = true }
la-arena = "0.3"
toc-salsa-collections.workspace = true
toc-source-graph = { workspace = true }
toc-syntax = { workspace = true }
toc-vfs-db = { workspace = true }
toc-ast-db = { workspace = true }
rustc-hash.workspace = true
bitflags = "2.3.2"

toc-hir-expand.workspace = true

salsa = { workspace = true }

[dev-dependencies]
toc-paths.workspace = true
toc-vfs.workspace = true
camino.workspace = true
insta.workspace = true
