[package]
name = "toc-hir-expand"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-source-graph = { workspace = true }

# hir::expand deps #
toc-syntax = { workspace = true }
toc-vfs-db = { workspace = true }
toc-ast-db = { workspace = true }
rustc-hash.workspace = true

salsa = { workspace = true }
