[package]
name = "toc-hir"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { workspace = true }
internment = "0.8"
la-arena = "0.3"
salsa.workspace = true
toc-span = { workspace = true }
toc-source-graph = { workspace = true }

toc-hir-expand.workspace = true
toc-hir-def.workspace = true
