[package]
name = "toc-parser"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-paths.workspace = true
toc-reporting = { workspace = true }
toc-scanner = { workspace = true }
toc-syntax = { workspace = true }
toc-span = { workspace = true }

rowan.workspace = true
drop_bomb = "0.1.5"
indexmap = { workspace = true }

[dev-dependencies]
expect-test = "1.1"
