[package]
name = "toc-scanner"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-reporting = { workspace = true }
toc-span = { workspace = true }
logos = "0.12"

[dev-dependencies]
expect-test = "1.1"
