[package]
name = "toc-source-graph"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-span = { workspace = true }
toc-paths = { workspace = true }
toc-salsa-collections = { workspace = true }

rustc-hash.workspace = true
salsa = { workspace = true }

[dev-dependencies]
camino.workspace = true
