[package]
name = "toc-syntax"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local deps
toc-span = { workspace = true }
# External deps
rowan.workspace = true
num-derive = "^0.4"
num-traits = "0.2"
lexical = { version = "^7", default-features = false, features = [ "std", "parse-floats", ] }
thiserror.workspace = true
