[package]
name = "toc-vfs-db"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-paths = { workspace = true }
toc-vfs = { workspace = true }
salsa = { workspace = true }
toc-salsa-collections = { workspace = true }
camino = { workspace = true }
parking_lot = "0.12"
rustc-hash.workspace = true
