[package]
name = "toc"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_ast = { path = "../toc_ast" }
toc_core = { path = "../toc_core" }
toc_frontend = { path = "../toc_frontend" }
toc_ir = { path = "../toc_ir" }

getopts = "^0.2"