[package]
name = "toc_analysis"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_reporting = { path = "../toc_reporting" }
toc_span = { path = "../toc_span" }
toc_hir = { path = "../toc_hir" }

indexmap = "1.6"
internment = "0.5.0"
thiserror = "1.0.24"

[dev-dependencies]
toc_parser = { path = "../toc_parser" }
toc_validate = { path = "../toc_validate" }
toc_hir_lowering = { path = "../toc_hir_lowering" }

insta = "1.7"
unindent = "0.1.7"
paste = "1.0.5"
