[package]
name = "toc-analysis"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-hir = { workspace = true }
toc-hir-db = { workspace = true }
toc-reporting = { workspace = true }
toc-salsa = { workspace = true }
toc-span = { workspace = true }

indexmap = { workspace = true }
thiserror = "1.0.24"

[dev-dependencies]
toc-ast-db = { workspace = true }
toc-vfs = { workspace = true }
toc-vfs-db = { workspace = true }

insta = "1.7"
unindent = "0.1.7"
paste = "1.0.5"
