[package]
name = "toc-ast-db"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-salsa = { workspace = true }
toc-syntax = { workspace = true }
toc-source-graph = { workspace = true }
toc-span = { workspace = true }
toc-vfs = { workspace = true }
toc-vfs-db = { workspace = true }
toc-parser = { workspace = true }
toc-validate = { workspace = true }
toc-reporting = { workspace = true }
