[package]
name = "toc_driver"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_reporting = { path = "../toc_reporting" }
toc_syntax = { path = "../toc_syntax" }
toc_hir = { path = "../toc_hir" }
toc_hir_db = { path = "../toc_hir_db" }
toc_hir_pretty = { path = "../toc_hir_pretty" }
toc_vfs = { path = "../toc_vfs" }
toc_vfs_db = { path = "../toc_vfs_db" }
toc_analysis = { path = "../toc_analysis" }
toc_span = { path = "../toc_span" }
toc_ast_db = { path = "../toc_ast_db" }
toc_salsa = { path = "../toc_salsa" }

ariadne = { version = "0.1" }
