[package]
name = "toc-driver"
version = "0.1.0"
authors = ["DropDemBits"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-analysis = { workspace = true }
toc-ast-db = { workspace = true }
toc-hir = { workspace = true }
toc-hir-codegen = { workspace = true }
toc-hir-db = { workspace = true }
toc-hir-pretty = { workspace = true }
toc-reporting = { workspace = true }
toc-salsa = { workspace = true }
toc-span = { workspace = true }
toc-syntax = { workspace = true }
toc-vfs = { workspace = true }
toc-vfs-db = { workspace = true }

ariadne = { version = "0.1" }
clap = { version = "4.0.22", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
