[package]
name = "toc_dummy"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_parser = { path = "../toc_parser" }
toc_syntax = { path = "../toc_syntax" }