[package]
name = "toc_dummy"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_reporting = { path = "../toc_reporting" }
toc_parser = { path = "../toc_parser" }
toc_validate = { path = "../toc_validate" }
toc_syntax = { path = "../toc_syntax" }
toc_hir = { path = "../toc_hir" }
toc_hir_lowering = { path = "../toc_hir_lowering" }
toc_vfs = { path = "../toc_vfs" }