[package]
name = "toc_hir"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { workspace = true }
internment = "0.7.0"
la-arena = "0.2.0"
lazy_static = "1.4.0"
toc_span = { path = "../toc_span" }
