[package]
name = "toc_hir_lowering"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_syntax = { path = "../toc_syntax" }
toc_hir = { path = "../toc_hir" }
toc_reporting = { path = "../toc_reporting" }
toc_span = { path = "../toc_span" }

[dev-dependencies]
toc_parser = { path = "../toc_parser" }
if_chain = "1.0"
expect-test = "=1.0.1"
approx = "0.4"