[package]
name = "toc_hir_lowering"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_ast_db = { path = "../toc_ast_db" }
toc_syntax = { path = "../toc_syntax" }
toc_hir = { path = "../toc_hir" }
toc_reporting = { path = "../toc_reporting" }
toc_span = { path = "../toc_span" }

indexmap = "1"

[dev-dependencies]
toc_salsa = { path = "../toc_salsa" }
toc_vfs = { path = "../toc_vfs" }
if_chain = "1.0"
approx = "0.5"

insta = "1.7"
unindent = "0.1.7"
paste = "1.0.5"
