[package]
name = "toc-hir-lowering"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-ast-db = { workspace = true }
toc-syntax = { workspace = true }
toc-hir = { workspace = true }
toc-reporting = { workspace = true }
toc-span = { workspace = true }

indexmap = { workspace = true }

[dev-dependencies]
toc-salsa = { workspace = true }
toc-vfs = { workspace = true }
toc-vfs-db = { workspace = true }
toc-hir-pretty = { workspace = true }
if_chain = "1.0"
approx = "0.5"

insta = { workspace = true }
unindent = { workspace = true }
paste = { workspace = true }
