[package]
name = "toc-hir-pretty"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
toc-hir = { workspace = true }
toc-span = { workspace = true }
toc-source-graph = { workspace = true }
