[package]
name = "toc_parser"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_reporting = { path = "../toc_reporting" }
toc_scanner = { path = "../toc_scanner" }
toc_syntax = { path = "../toc_syntax" }
toc_span = { path = "../toc_span" }

rowan = "0.15"
drop_bomb = "0.1.5"
indexmap = { workspace = true }

[dev-dependencies]
expect-test = "1.1"
