[package]
name = "toc-parser"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc-reporting = { workspace = true }
toc-scanner = { workspace = true }
toc-syntax = { workspace = true }
toc-span = { workspace = true }

rowan = "0.15"
drop_bomb = "0.1.5"
indexmap = { workspace = true }

[dev-dependencies]
expect-test = "1.1"
