[package]
name = "toc_scanner"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_reporting = { path = "../toc_reporting" }
logos = "^0.11"

[dev-dependencies]
expect-test = "=1.0.1"
