[package]
name = "toc_scanner"
version = "0.1.0"
authors = ["DropDemBits <r3usrlnd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toc_reporting = { path = "../toc_reporting" }
toc_span = { path = "../toc_span" }
logos = "0.12"

[dev-dependencies]
expect-test = "1.1"
